--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
 	</dependencies>
 
 	<build>
+		   <finalName>seu-projeto-${project.parent.version}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -69,7 +70,19 @@
 	                </execution>
 	            </executions>
 	        </plugin>
-	    </plugins>
+	        
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 	</build>
 
 
