--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,25 @@ spring:
 #      username: teste
       
       uri: mongodb://teste:naumsei01@ds129146.mlab.com:29146/base-teste
+  redis: 
+    url: redis-19006.c8.us-east-1-2.ec2.cloud.redislabs.com #127.0.0.1
+    port: 19006 #6379
       
-redis: 
-  url: redis-19006.c8.us-east-1-2.ec2.cloud.redislabs.com #127.0.0.1
-  port: 19006 #6379
+  
+
+    
+heroku:
+  applicationName: ${rootArtifactId}
+  info:
+    projectName: parent.name
+    version: project.version
+    timestamp: creation.time.timestamp
+  cache:
+    timeout:
+      defaultExpiration: 30
+    names: template-1, template-2
+
+management:
+  security:
+    enabled: false
+  context-path: /actuator
